@@ -164,9 +164,17 @@ Categories=GNOME;GTK;Network;WebBrowser;
 MimeType=text/html;text/xml;application/xhtml+xml;application/xml;application/vnd.mozilla.xul+xml;application/rss+xml;application/rdf+xml;image/gif;image/jpeg;image/png;x-scheme-handler/http;x-scheme-handler/https;x-scheme-handler/ftp;x-scheme-handler/chrome;video/webm;
 StartupWMClass=@MOZ_DISPLAY_NAME@
 StartupNotify=true
+%%ifdef MOZ_FREEDESKTOP_ACTIONS
+Actions=NewWindow;
+%%define TARGET_ENV OnlyShowIn=Unity;
+%%define NEW_WINDOW_SECTION [Desktop Action NewWindow]
+%%else
 X-Ayatana-Desktop-Shortcuts=NewWindow;
+%%define TARGET_ENV TargetEnvironment=Unity
+%%define NEW_WINDOW_SECTION [NewWindow Shortcut Group]
+%%endif
 
-[NewWindow Shortcut Group]
+%%expand __NEW_WINDOW_SECTION__
 Name=Open a New Window
 Name[ast]=Abrir una ventana nueva
 Name[bn]=Abrir una ventana nueva
@@ -198,4 +206,4 @@ Name[uk]=Відкрити нове вікно
 Name[zh_CN]=新建窗口
 Name[zh_TW]=開啟新視窗
 Exec=@MOZ_APP_NAME@ -new-window
-TargetEnvironment=Unity
+%%expand __TARGET_ENV__
