@@ -15,8 +15,12 @@ firefox-trunk (13.0~a1~hg20120313r88815-0ubuntu2) UNRELEASED; urgency=low
     - update debian/firefox.desktop.in
   * Update desktop file translations
     - update debian/firefox.sh.in
+  * Ensure that additional actions in the desktop file match the fd.o spec
+    in precise
+    - update debian/firefox.desktop.in
+    - update debian/rules
 
- -- Chris Coulson <chris.coulson@canonical.com>  Wed, 04 Apr 2012 20:20:14 +0100
+ -- Chris Coulson <chris.coulson@canonical.com>  Wed, 04 Apr 2012 20:46:23 +0100
 
 firefox-trunk (13.0~a1~hg20120313r88815-0ubuntu1) precise; urgency=low
 
